[metadata]
name=jiml
version=0.1.4
license=MIT
description=Convert json to json using jinja2 and yaml
long_description=file: README.md
long_description_content_type=text/markdown
url=https://github.com/vmstarchenko/jiml
keywords=json2json, jsontojson, json, yaml, template, convert
platform = any
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: IronPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
setup_requires=setuptools>=42
install_requires=
    PyYAML
    Jinja2
    jinja-vanish
    jsonschema
tests_require=tox
packages=jiml
zip_safe=true

[coverage:run]
branch=True
include=jiml/*
omit=
    jiml/__main__.py
relative_files=True

[coverage:report]
show_missing=True

[flake8]
max_line_length=99
exclude=.asv,.eggs,.tox,.ipynb_checkpoints,build,dist,.git,__pycache__

[bdist_wheel]
universal=1

[check]
metadata=true
